overflow-y fix

--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@
 body {
     position: relative;
     overflow-x: hidden;
-    overflow-y: hidden;
+   
 }
 
 .full-image-wrapper {
